# the-prediction-market

./: .gitignore  README.md
agents/: market_creator.ship  resolver_oracle.ship
cli/: Cargo.toml
cli/src/: main.rs
contract/: Cargo.toml
contract/src/: lib.rs
scripts/: setup_demo.sh
tools/: get_price.rs
